reviewed the concept of hoisting with variables, named & unnamed functions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Title</title>
 </head>
 <body>
-<script src="js/callApplyBind.js"></script>
+<script src="js/hoisting.js"></script>
 </body>
 </html>
