reviewed getOwnPropertyNames method alone and with forEach

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Title</title>
 </head>
 <body>
-<script src="js/forInLoop.js"></script>
+<script src="js/getOwnPropertyNames.js"></script>
 </body>
 </html>
